--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 <header class="head">Oh the Places You'll Go</header><br><br>
 
-<nav class="nav"><a href="../~jwroberts1/index.html">Home</a> - <a href="../~jwroberts1/themoreIlearn.html">The More I Learn</a> - <a href="../~jwroberts1/things.html">The Things You'll Do</a> - <!--<a href="../theplacesyoullgo/fun.html">The Fun You'll Have</a>- --> <a href="../~jwroberts1/contact.html">Contact Us</a></nav>
+<nav class="nav"><a href=" index.html">Home</a> - <a href="themoreIlearn.html">The More I Learn</a> - <a href="things.html">The Things You'll Do</a> - <!--<a href="fun.html">The Fun You'll Have</a>- --> <a href="contact.html">Contact Us</a></nav>
 <!--<aside>This will be used for the search functionality on the site and will float beside the navigation</aside>-->
 <main>
   <p class="list_headings">Welcome</p>
   <p class="content">Welcome to the Places You’ll Go. This site will highlight all of the adventures that my son gets into and hopefully it can be a little time capsule for him as he gets older and looks back on all the places he has been. Hopefully as he learns more and more about programming he will be able to add his own flair to this and he can pick it up and run with it for his family (a dad can hope)!  But take a look around and get to know us and mainly him a little.</p>
-  <p style="text-align: center" class="content"><img  src="assets/BabyCuddles.JPG" width="490" height="367" alt="Baby Cuddles"> <img  src="assets/Baby9ers.JPG" width="490" height="367" alt="Baby 49ers"> <img  src="assets/KindergartenDay1.jpg" width="605" height="454" alt="Kindergarten"></p>
+  <p style="text-align: center" class="content"><img  src="BabyCuddles.JPG" width="490" height="367" alt="Baby Cuddles"> <img  src="Baby9ers.JPG" width="490" height="367" alt="Baby 49ers"> <img  src="KindergartenDay1.jpg" width="605" height="454" alt="Kindergarten"></p>
 </main>
 
 <footer class="attribution">Background <a href="https://www.freepik.com/free-photo/beautiful-cloudscape_1119665.htm#page=8&query=blue%20sky%20clouds%20background&position=2&from_view=keyword&track=ais">Image by fanjianhua</a> on Freepik</footer>
