--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
 <header class="head">Contact Us</header><br><br>
 
-<nav class="nav"><a href="../~jwroberts1/index.html">Home</a> - <a href="../~jwroberts1/themoreIlearn.html">The More I Learn</a> - <a href="../~jwroberts1/things.html">The Things You'll Do</a> - <!--<a href="../theplacesyoullgo/fun.html">The Fun You'll Have</a>- --> <a href="../~jwroberts1/contact.html">Contact Us</a></nav>
+<nav class="nav"><a href="index.html">Home</a> - <a href="themoreIlearn.html">The More I Learn</a> - <a href="things.html">The Things You'll Do</a> - <!--<a href="fun.html">The Fun You'll Have</a>- --> <a href="contact.html">Contact Us</a></nav>
 <!--<aside>This will be used for the search functionality on the site and will float beside the navigation</aside>-->
 <main>
   <p class="list_headings">Contact Us</p>
