--- a/themoreIlearn.html
+++ b/themoreIlearn.html
@@ -17,13 +17,13 @@
 <body>
 <header class="head">The More I Learn</header><br><br>
 
-<nav class="nav"><a href="../~jwroberts1/index.html">Home</a> - <a href="../~jwroberts1/themoreIlearn.html">The More I Learn</a> - <a href="../~jwroberts1/things.html">The Things You'll Do</a> - <!--<a href="../theplacesyoullgo/fun.html">The Fun You'll Have</a>- --> <a href="../~jwroberts1/contact.html">Contact Us</a></nav>
+<nav class="nav"><a href="index.html">Home</a> - <a href="themoreIlearn.html">The More I Learn</a> - <a href="things.html">The Things You'll Do</a> - <!--<a href="fun.html">The Fun You'll Have</a>- --> <a href="contact.html">Contact Us</a></nav>
 
 <!--<aside>This will be used for the search functionality on the site and will float beside the navigation</aside>-->
 <main>
   <p class="list_headings">Learning</p>
   <p class="content">This page highlights the little dudes education from pre-school thru Senior Year and beyond.  We will highlight every year what the little guy is learning.  So jump in learn your ABC's and go on this adventure with us!</p>
-  <p style="text-align: center" class="content"><img  src="assets/Graduation.JPG" width="490" height="367" alt="Graduation"> <img  src="assets/Farming.JPG" width="490" height="367" alt="Farming"> <img  src="assets/EMT.JPG" width="605" height="454" alt="EMT"></p>
+  <p style="text-align: center" class="content"><img  src="Graduation.JPG" width="490" height="367" alt="Graduation"> <img  src="Farming.JPG" width="490" height="367" alt="Farming"> <img  src="EMT.JPG" width="605" height="454" alt="EMT"></p>
 </main>
 <!--<section>
   <p class="list_headings">Random Quotes maybe funny image area will float to the right of the main carousel</p>
