--- a/things.html
+++ b/things.html
@@ -17,12 +17,12 @@
 <body>
 <header class="head">The Things You'll Do</header><br><br>
 
-<nav class="nav"><a href="../~jwroberts1/index.html">Home</a> - <a href="../~jwroberts1/themoreIlearn.html">The More I Learn</a> - <a href="../~jwroberts1/things.html">The Things You'll Do</a> - <!--<a href="../theplacesyoullgo/fun.html">The Fun You'll Have</a>- --> <a href="../~jwroberts1/contact.html">Contact Us</a></nav>
+<nav class="nav"><a href="index.html">Home</a> - <a href="themoreIlearn.html">The More I Learn</a> - <a href="things.html">The Things You'll Do</a> - <!--<a href="../theplacesyoullgo/fun.html">The Fun You'll Have</a>- --> <a href="contact.html">Contact Us</a></nav>
 <!--<aside>This will be used for the search functionality on the site and will float beside the navigation</aside>-->
 <main>
   <p class="list_headings">Extra Curricular Activities</p>
   <p class="content">This page will highlight all of the things that the little dude is into outside of school. Grab a remote and lets go fly our drones or race our RC Cars.  Grab a helmet and lets go ride some bikes.  Put on some pads and lets fight, he has a super broad range of interests and its hard for us to keep up!</p>
-  <p style="text-align: center" class="content"><img  src="assets/DinoATV.JPG" width="490" height="367" alt="Dino"> <img  src="assets/Kumite.JPG" width="490" height="367" alt="Kumite"> <img  src="assets/Drones.JPG" width="605" height="454" alt="Drones"></p>
+  <p style="text-align: center" class="content"><img  src="DinoATV.JPG" width="490" height="367" alt="Dino"> <img  src="Kumite.JPG" width="490" height="367" alt="Kumite"> <img  src="Drones.JPG" width="605" height="454" alt="Drones"></p>
 </main>
 <!--<section>
   <p class="list_headings">Random Quotes maybe funny image area will float to the right of the main carousel</p>
